--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,10 +1,12 @@
-name: CI
+name: On pull request
 
 on: 
   pull_request:
     branches:
-    - master
-    
+      - master
+    paths:
+      - '*.dart'
+      - '*.g.dart'  
 
 jobs:
   flutter:
