--- a/.github/workflows/on_master.yml
+++ b/.github/workflows/on_master.yml
@@ -16,13 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - run: sudo chown -R cirrus:cirrus ./ /github/home/
-    - name: Flutter pub get
-      run: flutter packages get
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable'
     - name: Flutter test
       run: flutter test --coverage
     - uses: codecov/codecov-action@v1.0.2
       with:
         token: ${{secrets.CODECOV_TOKEN}} #required
         file: ./coverage.yml
-
