--- a/.github/workflows/on_master.yml
+++ b/.github/workflows/on_master.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         channel: 'stable'
     - name: Flutter test
-      run: flutter test --coverage --coverage-path ./lcov.info
+      run: flutter test --coverage
     - uses: codecov/codecov-action@v1.0.2
       with:
         token: ${{secrets.CODECOV_TOKEN}} #required
