fix codecov file path
Signed-off-by: kevin <segaud.kevin@gmail.com>

--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -22,5 +22,5 @@ jobs:
     - uses: codecov/codecov-action@v1.0.2
       with:
         token: ${{secrets.CODECOV_TOKEN}} #required
-        file: ./coverage.yml
+        file: ./coverage/lcov.info
 
