--- a/.github/workflows/on_master.yml
+++ b/.github/workflows/on_master.yml
@@ -22,4 +22,4 @@ jobs:
     - uses: codecov/codecov-action@v1.0.2
       with:
         token: ${{secrets.CODECOV_TOKEN}} #required
-        file: ./coverage.yml
+        file: ./coverage/lcov.info
