more log to understand
Signed-off-by: kevin <segaud.kevin@gmail.com>

--- a/.github/workflows/on_tag.yml
+++ b/.github/workflows/on_tag.yml
@@ -18,6 +18,12 @@ jobs:
         channel: 'stable'
     - name: Flutter pub get
       run: flutter packages get
+    - name: ls -la ../
+      run: ls -la ../
+    - name: echo $HOME
+      run: echo $HOME
+    - name: echo ENV
+      run: echo $ENV
     - name: Add credentials
       run: echo $PUB_CREDENTIALS > ~/.pub-cache/credentials.json
     - name: Publish
