--- a/.github/workflows/on_tag.yml
+++ b/.github/workflows/on_tag.yml
@@ -24,10 +24,14 @@ jobs:
       run: ls -la ../../
     - name: echo $HOME
       run: echo $HOME
-    - name: ls $HOME/.flutter
-      run: ls -la $HOME/.flutter
-    - name: ls $HOME/work
-      run: ls -la $HOME/work
+    - name: ls $HOME/
+      run: ls -la $HOME/
+    - name: ls $HOME/.flutter/
+      run: ls -la $HOME/.flutter/
+    - name: ls $HOME/work/
+      run: ls -la $HOME/work/
+    - name: try find .pub-cache folder
+      run: find / -type d -name ".pub-cache"
     - name: Add credentials
       run: echo $PUB_CREDENTIALS > ~/.pub-cache/credentials.json
     - name: Publish
