--- a/.github/workflows/on_tag.yml
+++ b/.github/workflows/on_tag.yml
@@ -16,22 +16,8 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         channel: 'stable'
-    - name: Flutter pub get
-      run: flutter packages get
-    - name: ls -la ../
-      run: ls -la ../
-    - name: ls -la ../../
-      run: ls -la ../../
-    - name: echo $HOME
-      run: echo $HOME
-    - name: ls $HOME/
-      run: ls -la $HOME/
-    - name: ls $HOME/work/
-      run: ls -la $HOME/work/
-    - name: try find .pub-cache folder
-      run: find / -type d -name ".pub-cache"
     - name: Add credentials
-      run: echo $PUB_CREDENTIALS > ~/.pub-cache/credentials.json
+      run: echo $PUB_CREDENTIALS > /opt/hostedtoolcache/flutter/1.9.1-hotfix.2-stable/x64/.pub-cache/credentials.json
     - name: Publish
       run: flutter pub pub publish --force
 
