--- a/.github/workflows/on_tag.yml
+++ b/.github/workflows/on_tag.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: subosito/flutter-action@v1
       with:
         channel: 'stable'
+    - name: Log fake credentials
+      run: echo $PUB_CREDENTIALS
     - name: Add credentials
       run: echo $PUB_CREDENTIALS > /opt/hostedtoolcache/flutter/1.9.1-hotfix.2-stable/x64/.pub-cache/credentials.json
     - name: Publish
