--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ build/
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 coverage
+example/ios/Flutter/flutter_export_environment.sh
