--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: rc_router
 description: A simple but powerful Flutter router.
-version: 1.0.0
+version: 1.0.1
 homepage: https://rushio-consulting.fr
 
 environment:
@@ -9,9 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^5.0.0
+  provider: ^6.0.1
   pedantic: ^1.11.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.4
